comm changes to 5-nvt-600.mdp

--- a/ab40/system/setup/setup.ipynb
+++ b/ab40/system/setup/setup.ipynb
@@ -173,7 +173,7 @@
     "# procedure to extract 48 confirmations\n",
     "\n",
     "# 1. adding water molecules\n",
-    "gmx_mpi editconf -f collapsed-ab40.gro -o template_newbox.gro -c -d 1.2 -bt dodecahedron\n",
+    "gmx_mpi editconf -f collapsed-ab40.gro -o template_newbox.gro -c -d 1.3 -bt dodecahedron\n",
     "gmx_mpi solvate -cp template_newbox.gro -cs spc216.gro -o template_solv.gro -p ../topol.top\n",
     "\n",
     "# 2. adding ions\n",
@@ -209,183 +209,18 @@
     "gerun gmx_mpi mdrun -deffnm 3-berendsen -v &> 3-berendsen-terminal.log\n",
     "\n",
     "# 6. nvt-600\n",
-    "gmx_mpi grompp -f ../mdp_files/4-nvt-600.mdp -c 3-berendsen.gro -r 3-berendsen.gro -p ../topol.top -o 4-nvt-600.tpr -maxwarn 2\n",
-    "gerun gmx_mpi mdrun -deffnm 4-nvt-600 -v &> 4-nvt-600-terminal.log\n",
-    "\n",
-    "\n",
-    "# experiment: directly doing nvt-600 after EM\n",
-    "gmx_mpi grompp -f ../mdp_files/5-nvt-600.mdp -c em.gro -r em.gro -p ../topol.top -o 5-nvt-600.tpr\n"
+    "gmx_mpi grompp -f ../mdp_files/5-nvt-600.mdp -c 3-berendsen.gro -r 3-berendsen.gro -p ../topol.top -o 5-nvt-600.tpr -maxwarn 2\n",
+    "gerun gmx_mpi mdrun -deffnm 5-nvt-600 -v &> 5-nvt-600-terminal.log\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gmx_mpi grompp -f ../mdp_files/invacuo-run.mdp -c ../template.gro -p ../topol.top -o invacuo_input.tpr -maxwarn 1\n",
+    "# extracting 48 confirmations\n",
     "\n",
-    "# kept encountering this error even after increasing box size\n",
-    "# ERROR 1 [file topol.top, line 5629]:\n",
-    "#   ERROR: The cut-off length is longer than half the shortest box vector or\n",
-    "#   longer than the smallest box diagonal element. Increase the box size or\n",
-    "#   decrease rlist\n",
-    "\n",
-    "gerun gmx_mpi mdrun -s invacuo_input.tpr -o invacuo.trr -x invacuo.xtc -c collapsed.gro -g invacuo.log -e invacuo.edr -v -maxh 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "# 1ns in vacuo simulation. nvt or production?\n",
-    "\n",
-    "gmx_mpi editconf -f ../template.gro -o template_newbox.gro -c -d 1.0 -bt dodecahedron\n",
-    "# output of the above command Volume: 362.038 nm^3\n",
-    "\n",
-    "# used this as larger distance from replica\n",
-    "gmx_mpi editconf -f ../template.gro -o template_newbox.gro -c -d 2.0 -bt dodecahedron\n",
-    "\n",
-    "gmx_mpi solvate -cp template_newbox.gro -cs spc216.gro -o template_solv.gro -p ../topol.top\n",
-    "# only 5922 solvent molecules added compared to 11000 in the paper\n",
-    "\n",
-    "gmx_mpi solvate -cp template_newbox2.gro -cs spc216.gro -o template_solv2.gro -p ../topol_orig.top\n",
-    "\n",
-    "# WARNING: Masses and atomic (Van der Waals) radii will be guessed\n",
-    "#          based on residue and atom names, since they could not be\n",
-    "#          definitively assigned from the information in your input\n",
-    "#          files. These guessed numbers might deviate from the mass\n",
-    "#          and radius of the atom type. Please check the output\n",
-    "#          files if necessary. Note, that this functionality may\n",
-    "#          be removed in a future GROMACS version. Please, consider\n",
-    "#          using another file format for your input.\n",
-    "\n",
-    "# NOTE: From version 5.0 gmx solvate uses the Van der Waals radii\n",
-    "# from the source below. This means the results may be different\n",
-    "# compared to previous GROMACS versions.\n",
-    "\n",
-    "# ++++ PLEASE READ AND CITE THE FOLLOWING REFERENCE ++++\n",
-    "# A. Bondi\n",
-    "# van der Waals Volumes and Radii\n",
-    "# J. Phys. Chem. 68 (1964) pp. 441-451"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# adding NaCl and KCl to the box\n",
-    "\n",
-    "# am confused about the mdp file used. the file uses 1nm as the cutoff distances for WDW/coulomb interactions\n",
-    "# while the cutoff used in actual simulation is 1.2\n",
-    "gmx_mpi grompp -f ../mdp_files/ions.mdp -c template_solv.gro -p ../topol.top -o genion_NaCl_input.tpr -maxwarn 1\n",
-    "gmx_mpi genion -s genion_NaCl_input.tpr -o genion_NaCl_output.gro -conc 0.137 -pname NA -nname CL -p ../topol.top\n",
-    "\n",
-    "gmx_mpi grompp -f ../mdp_files/ions.mdp -c genion_NaCl_output.gro -p ../topol.top -o genion_KCl_input.tpr\n",
-    "gmx_mpi genion -s genion_KCl_input.tpr -o genion_KCl_output.gro -conc 0.00268 -pname K -nname CL -p ../topol.top"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# following Alice's instructions to collapse the protein\n",
-    "# 1 – energy minimisation\n",
-    "\n",
-    "# 2 – position restraints\n",
-    "\n",
-    "# 3 – Berendsen, using the .mdp file I attached below at 310K (this won’t collapse the structure, it’s just a step before to equilibrate)\n",
-    "\n",
-    "# 4 – NVT 600K to get the collapsed structure"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# energy minimization\n",
-    "# same confusion as previous cell regarding mdp file, cutoff distances and other parameters different\n",
-    "gmx_mpi grompp -f ../mdp_files/0-em-steep.mdp -c genion_KCl_output.gro -p ../topol.top -o em_input.tpr -maxwarn 1\n",
-    "gerun gmx_mpi mdrun -s em_input.tpr -o em.trr -x em.xtc -c em_output.gro -g em.log -e em.edr -v -maxh 10\n",
-    "\n",
-    "# Steepest Descents converged to Fmax < 1000 in 101 steps\n",
-    "# Potential Energy  = -2.6635816e+05\n",
-    "# Maximum force     =  9.3316010e+02 on atom 409\n",
-    "# Norm of force     =  7.3510789e+01"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gmx_mpi grompp -f ../mdp_files/3-berendsen.mdp -c em_output.gro -r em_output.gro -p ../topol.top -o 3-berendsen_input2.tpr -maxwarn 1\n",
-    "# NOTE 2 [file unknown]:\n",
-    "#   You are using constraints on all bonds, whereas the forcefield has been\n",
-    "#   parametrized only with constraints involving hydrogen atoms. We suggest\n",
-    "#   using constraints = h-bonds instead, this will also improve performance.\n",
-    "gerun gmx_mpi mdrun -s 3-berendsen_input.tpr -o 3b.trr -x 3b.xtc -c 3b_output.gro -g 3b.log -e nvt.edr -v &> 3b_terminal.log\n",
-    "\n",
-    "gmx_mpi grompp -f ../mdp_files/3-berendsen.mdp -c 3b_temp_output.gro -r 3b_temp_output.gro -p ../topol.top -o 3-berendsen_input_final.tpr -maxwarn 2\n",
-    "gerun gmx_mpi mdrun -deffnm 3-berendsen_final.tpr -v &> 3b_final_terminal.log\n",
-    "\n",
-    "\n",
-    "# Fatal error:\n",
-    "# 2 particles communicated to PME rank 3 are more than 2/3 times the cut-off out\n",
-    "# of the domain decomposition cell of their charge group in dimension x.\n",
-    "# This usually means that your system is not well equilibrated."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# and attempting 3-berendsen step again after chaning 3-berendsen.mdp parameters: T = 278 K, timestep = 1 fs\n",
-    "\n",
-    "gmx_mpi grompp -f ../mdp_files/3-berendsen.mdp -c em_output.gro -r em_output.gro -p ../topol.top -o 3-berendsen_v1.tpr -maxwarn 2\n",
-    "gerun gmx_mpi mdrun -deffnm 3-berendsen_v1.tpr -v &> 3-berendsen.log"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# preliminary 2-ns simulation at 600 K in the NVT ensemble\n",
-    "# the paper doesn't mention position restraints. so no position restraints? obv no posres cuz want to find max rms replicas\n",
-    "# also which thermostat to use?\n",
-    "gmx_mpi grompp -f ../mdp_files/nvt-run-600.mdp -c em_output.gro -p ../topol.top -o nvt_600_input.tpr -maxwarn 1\n",
-    "gerun gmx_mpi mdrun -s nvt_600_input.tpr -o nvt_600.trr -x nvt_600.xtc -c nvt_600_output.gro -g nvt_600.log -e nvt.edr -v &> nvt_600.log"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# algorithm to extract 48 confirmations\n",
     "\n",
     "import os\n",
@@ -403,34 +238,24 @@
     "import sklearn\n",
     "from sklearn.decomposition import PCA\n",
     "import itertools\n",
-    "import mdtraj as md\n"
+    "import mdtraj as md\n",
+    "\n",
+    "topology=f\"5-nvt-600-no-water.gro\"\n",
+    "trajectory=f\"5-nvt-600.xtc\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "topology=f\"4-nvt-600.gro\"\n",
-    "trajectory=f\"4-nvt-600.trr\"\n",
-    "    \n",
-    "# print(\"pdb:\",topology)\n",
-    "# print(\"trjaectory:\",trajectory)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "501"
+       "201"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +266,6 @@
     "trj.center_coordinates()\n",
     "top = trj.topology\n",
     "first_frame = 0\n",
-    "last_frame = trj.n_frames\n",
     "n_frames=trj.n_frames\n",
     "\n",
     "n_frames"
@@ -449,12 +273,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "frame = trj[454]\n",
-    "frame.save('454.gro')"
+    "# frame = trj[0]\n",
+    "# frame.save('5-nvt-600-no-water.gro')\n",
+    "trj.save_xtc('5-nvt-600-no-water.xtc')"
    ]
   },
   {
@@ -462,9 +287,7 @@
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "trj.save_trr('ab40-no-water.trr')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -486,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -531,12 +354,10 @@
        " 'GLY',\n",
        " 'GLY',\n",
        " 'VAL',\n",
-       " 'VAL',\n",
-       " 'ILE',\n",
-       " 'ALA']"
+       " 'VAL']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,25 +388,26 @@
     "# print(\"residue index: %s\\n\" % resindex)\n",
     "resname = [residue.name for residue in trj.topology.residues]\n",
     "resname\n",
-    "DAEFRHDSGYEVHHQKLVFFAEDVGSNKGAIIGLMVGGVVIA\n",
-    "DAEFRHDSGYEVHHQKLVFFAEDVGSNKGAIIGLMVGGVV\n",
+    "# DAEFRHDSGYEVHHQKLVFFAEDVGSNKGAIIGLMVGGVVIA\n",
+    "# DAEFRHDSGYEVHHQKLVFFAEDVGSNKGAIIGLMVGGVV\n",
     "# print(''.join(resname))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "148"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'trj2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_14992\\2867430184.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mrmsd\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrmsd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrj2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrj2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;31m# print(max(rmsd))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mrmsd\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrmsd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrj2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrj2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# Find the index of the maximum value\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'trj2' is not defined"
+     ]
     }
    ],
    "source": [
@@ -600,63 +422,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1486,\n",
-       " 1209,\n",
-       " 1208,\n",
-       " 1220,\n",
-       " 1182,\n",
-       " 1197,\n",
-       " 1471,\n",
-       " 1476,\n",
-       " 1168,\n",
-       " 1244,\n",
-       " 1059,\n",
-       " 1483,\n",
-       " 1484,\n",
-       " 1485,\n",
-       " 1183,\n",
-       " 1184,\n",
-       " 1135,\n",
-       " 1185,\n",
-       " 1217,\n",
-       " 1352,\n",
-       " 931,\n",
-       " 1136,\n",
-       " 1137,\n",
-       " 837,\n",
-       " 1203,\n",
-       " 1219,\n",
-       " 1249,\n",
-       " 1468,\n",
-       " 1148,\n",
-       " 1475,\n",
-       " 1243,\n",
-       " 836,\n",
-       " 1202,\n",
-       " 1487,\n",
-       " 1488,\n",
-       " 1428,\n",
-       " 1437,\n",
-       " 1207,\n",
-       " 1865,\n",
-       " 1460,\n",
-       " 1869,\n",
-       " 1870,\n",
-       " 1149,\n",
-       " 1469,\n",
-       " 1470,\n",
-       " 1090,\n",
-       " 1196,\n",
-       " 1198]"
+       "[136,\n",
+       " 135,\n",
+       " 137,\n",
+       " 134,\n",
+       " 133,\n",
+       " 79,\n",
+       " 138,\n",
+       " 131,\n",
+       " 132,\n",
+       " 140,\n",
+       " 139,\n",
+       " 78,\n",
+       " 82,\n",
+       " 76,\n",
+       " 154,\n",
+       " 93,\n",
+       " 141,\n",
+       " 142,\n",
+       " 143,\n",
+       " 80,\n",
+       " 81,\n",
+       " 156,\n",
+       " 157,\n",
+       " 77,\n",
+       " 149,\n",
+       " 87,\n",
+       " 148,\n",
+       " 115,\n",
+       " 188,\n",
+       " 126,\n",
+       " 89,\n",
+       " 113,\n",
+       " 147,\n",
+       " 158,\n",
+       " 159,\n",
+       " 128,\n",
+       " 130,\n",
+       " 145,\n",
+       " 155,\n",
+       " 153,\n",
+       " 90,\n",
+       " 152,\n",
+       " 118,\n",
+       " 91,\n",
+       " 116,\n",
+       " 117,\n",
+       " 92,\n",
+       " 199]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,6 +492,7 @@
     "    # Calculate pairwise distances and initialize candidates list\n",
     "    for i in range(N):\n",
     "            rmsd = md.rmsd(trj, trj, i)\n",
+    "#             print(rmsd)\n",
     "            rmsd = np.delete(rmsd, i)\n",
     "\n",
     "            l_i = min(rmsd)\n",
