comm alice's mdp file

--- a/ab40/system/setup/setup.ipynb
+++ b/ab40/system/setup/setup.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1974,7 +1974,10 @@
     "for i in {1..39}; do gmx_mpi grompp -f ../mdp_files/7-npt-278.mdp -c r${i}/npt.gro -p ../topol.top -o r${i}/npt2.tpr -maxwarn 2; done\n",
     "gerun gmx_mpi mdrun -multidir r{0..39} -deffnm npt2 -v &> 8-npt-278-terminal.log\n",
     "\n",
-    "\n",
+    "# 3.3 NPT 5 fs\n",
+    "gmx_mpi grompp -f ../mdp_files/9-npt-278-5fs.mdp -c r0/nvt.gro -p ../topol.top -o r0/npt-5fs.tpr -maxwarn 2\n",
+    "for i in {1..39}; do gmx_mpi grompp -f ../mdp_files/7-npt-278.mdp -c r${i}/npt.gro -p ../topol.top -o r${i}/npt2.tpr -maxwarn 2; done\n",
+    "gerun gmx_mpi mdrun -multidir r{0..39} -deffnm npt2 -v &> 8-npt-278-terminal.log\n",
     "\n"
    ]
   },
@@ -2004,14 +2007,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1.88  0.74  0.24  1.83 10.23  2.82]\n"
+      "0       1.814646\n",
+      "1       1.836855\n",
+      "2       1.842854\n",
+      "3       1.824686\n",
+      "4       1.855819\n",
+      "          ...   \n",
+      "4035    1.525855\n",
+      "4036    1.538037\n",
+      "4037    1.531900\n",
+      "4038    1.535686\n",
+      "4039    1.549213\n",
+      "Name: 3, Length: 4040, dtype: float64\n",
+      "0.2353493909186317\n",
+      "[0.94 0.37 0.12 0.92 5.12 1.41]\n"
      ]
     }
    ],
@@ -2027,18 +2043,28 @@
     "salt = data[5]\n",
     "dihcor = data[6]\n",
     "\n",
-    "helix_std = np.std(helix)\n",
-    "beta_std = np.std(beta)\n",
-    "rgyr_std = np.std(rgyr)\n",
-    "hydro_std = np.std(hydro)\n",
-    "salt_std = np.std(salt)\n",
-    "dihcor_std = np.std(dihcor)\n",
+    "print(rgyr)\n",
+    "print(np.std(rgyr))\n",
+    "\n",
+    "helix_std = np.std(helix) / 2\n",
+    "beta_std = np.std(beta) / 2\n",
+    "rgyr_std = np.std(rgyr) / 2\n",
+    "hydro_std = np.std(hydro) / 2\n",
+    "salt_std = np.std(salt) / 2\n",
+    "dihcor_std = np.std(dihcor) / 2\n",
     "\n",
     "\n",
     "sigma = [helix_std, beta_std, rgyr_std, hydro_std, salt_std, dihcor_std]\n",
     "sigma = np.round(sigma, decimals = 2)\n",
     "\n",
     "print(sigma)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using sigma values: [0.94 0.37 0.12 0.92 5.12 1.41]"
    ]
   },
   {
