adding calvados files

--- a/ab40/system/setup/setup.ipynb
+++ b/ab40/system/setup/setup.ipynb
@@ -1975,9 +1975,9 @@
     "gerun gmx_mpi mdrun -multidir r{0..39} -deffnm npt2 -v &> 8-npt-278-terminal.log\n",
     "\n",
     "# 3.3 NPT 5 fs\n",
-    "gmx_mpi grompp -f ../mdp_files/9-npt-278-5fs.mdp -c r0/nvt.gro -p ../topol.top -o r0/npt-5fs.tpr -maxwarn 2\n",
-    "for i in {1..39}; do gmx_mpi grompp -f ../mdp_files/7-npt-278.mdp -c r${i}/npt.gro -p ../topol.top -o r${i}/npt2.tpr -maxwarn 2; done\n",
-    "gerun gmx_mpi mdrun -multidir r{0..39} -deffnm npt2 -v &> 8-npt-278-terminal.log\n",
+    "gmx_mpi grompp -f ../mdp_files/9-npt-278-5fs.mdp -c r0/npt.gro -p ../topol.top -o r0/npt-5fs-test.tpr -maxwarn 2\n",
+    "for i in {1..39}; do gmx_mpi grompp -f ../mdp_files/9-npt-278-5fs.mdp -c r${i}/npt.gro -p ../topol.top -o r${i}/npt-5fs.tpr -maxwarn 2; done\n",
+    "gerun gmx_mpi mdrun -multidir r{0..39} -deffnm npt-5fs -v &> 9-npt-278-5fs-terminal.log\n",
     "\n"
    ]
   },
