comm ab42 jobscripts

--- a/ab42/system/setup.ipynb
+++ b/ab42/system/setup.ipynb
@@ -62,13 +62,14 @@
    "outputs": [],
    "source": [
     "# using hydrogen mass repartitioning for longer timesteps\n",
-    "gmx_mpi pdb2gmx -f ab40.pdb -o template.gro -ignh -heavyh -water tip3p\n",
+    "gmx_mpi pdb2gmx -f template.pdb -o template.gro -ignh -heavyh -water tip3\n",
     "\n",
-    "gmx_mpi pdb2gmx -f ab40.pdb -o template.gro -water tip3p -ignh\n",
+    "cd setup\n",
     "\n",
     "gmx_mpi editconf -f ../template.gro -o template_newbox.gro -c -d 2 -bt dodecahedron\n",
     "\n",
-    "gmx_mpi solvate -cp template_newbox.gro -cs spc216.gro -o template_solv.gro -p ../topol.top\n"
+    "gmx_mpi solvate -cp template_newbox.gro -cs spc216.gro -o template_solv.gro -p ../topol.top\n",
+    "# Number of solvent molecules:  13715"
    ]
   },
   {
@@ -77,14 +78,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# following Alice's instructions to collapse the protein\n",
     "# 1 – energy minimisation\n",
-    "\n",
-    "# 2 – position restraints\n",
-    "\n",
-    "# 3 – Berendsen, using the .mdp file I attached below at 310K (this won’t collapse the structure, it’s just a step before to equilibrate)\n",
-    "\n",
-    "# 4 – NVT 600K to get the collapsed structure"
+    "# 2 – NVT 600K to get replica structures"
    ]
   },
   {
@@ -106,7 +101,7 @@
     "#   the previous definition, then you could choose to suppress this warningb\n",
     "#   with -maxwarn.\n",
     "\n",
-    "gerun gmx_mpi mdrun -s em -v -maxh 10 &> em_terminal.log"
+    "gerun gmx_mpi mdrun -s em -v -maxh 5 &> em_terminal.log"
    ]
   },
   {
